hphp/hack/test/typecheck/clone_on_nonobject.php.exp
File "clone_on_nonobject.php", line 24, characters 12-27:
Clone cannot be called on non-object (Typing[4110])
File "clone_on_nonobject.php", line 24, characters 12-27:
Expected `object`
File "clone_on_nonobject.php", line 4, characters 11-13:
But got `int`
File "clone_on_nonobject.php", line 24, characters 12-27:
Invalid return type (Typing[4110])
File "clone_on_nonobject.php", line 23, characters 33-33:
Expected `A`
File "clone_on_nonobject.php", line 4, characters 11-13:
But got `int`
